--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
+    "mockjs": "^1.0.1-beta3",
+    "wepy-async-function": "^1.4.5",
     "wepy-compiler-babel": "^1.5.1",
     "wepy-compiler-less": "^1.3.10",
     "wepy-compiler-sass": "^1.3.12",
